<resources>
    <string name="app_name">Parcial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    /*View: Search flights view*/
    <string name="flights_search">Search</string>
    <string name="hint_from">From</string>
    <string name="select_departure">Select Departure</string>
    <string name="hint_to">To</string>
    <string name="select_arrival">Select Arrival</string>
    <string name="hint_departure_date">Departure Date</string>
    <string name="select_date">Select Date</string>
    <string name="hint_passengers">Passengers</string>
    <string name="select_passengers">1 Passenger</string>
    <string name="hint_class">Class</string>
    <string name="select_class">Class</string>
    <string name="add_destination">Add new destination</string>


    /*View: Search flights result*/
    <string name="flight_duration">%d hr %dmin</string>
    <string name="flight_price">$%d</string>
    <string name="from_price">From</string>
    <string name="view_flight_details">View Details</string>


    /*View: Explore fragment*/
    <string name="flight_link">Flight</string>
    <string name="trending_destinations">Trending destinations</string>
    <string name="see_all">See all</string>
    <string name="offers">Offers</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings/Preferences -->
    <string name="appearances_title">Generales</string>
    <!-- Deberia ser en ingles -->
    <string name="dark_mode_title">Modo Oscuro</string>
    <string name="dark_mode_key">darkMode</string>

    /*Destination detail fragment*/
    <string name="destination_overview">Overview</string>
    <string name="destination_photos_title">Photos</string>
    <string name="button_book_text">Book Now</string>

    <string name="favourite_saved_alert">"The destination was saved successfully!"</string>
    <string name="favourite_deleted_alert">"The destination was deleted successfully"</string>
    <string name="favourite_error_alert">"An error has occurred :("</string>

    <string name="favourite_offer_saved_alert">"The offer was saved successfully!"</string>
    <string name="favourite_offer_deleted_alert">"The offer was deleted successfully"</string>
    <string name="new_route">New route added</string>

      /*Drawer Menu*/

        <string name="open_drawer">Open Drawer</string>
        <string name="close_drawer">Close Drawer</string>
        <string name="menu_button_description">Menu</string>
        <string name="image1_description">Image 1</string>
        <string name="image2_description">Image 2</string>
    <string name="hello">Hello</string>


</resources>