<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.ExploreFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flight_category_description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThirdQuarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flight_category_description" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_destination"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_destination"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@drawable/paris" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_main_destination"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp">

            <CheckBox
                android:id="@+id/destination_like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sl_favourite"
                app:buttonTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/main_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai_2_bold"
                android:text="Paris"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/main_destination_price"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/main_destination_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai_2_bold"
                android:text="$1299"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/main_destination" />

            <TextView
                android:id="@+id/destination_from_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/from_price"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/main_destination_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/flight_category_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:drawableStart="@drawable/ic_flight"
        app:layout_constraintBottom_toTopOf="@+id/flight_category_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_destination"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/flight_category_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/flight_link"
        android:textColor="@color/fickle_black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flight_category_icon" />

    <TextView
        android:id="@+id/tending_destination_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/trending_destinations"
        android:textColor="@color/fickle_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tending_destination_link"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineMedium" />

    <TextView
        android:id="@+id/tending_destination_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/see_all"
        android:textColor="@color/fickle_light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tending_destination_header"
        app:layout_constraintTop_toTopOf="@+id/guidelineMedium" />

    <TextView
        android:id="@+id/offers_hearder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/offers"
        android:textColor="@color/fickle_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineThirdQuarter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trending_destination_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineThirdQuarter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tending_destination_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offers_recycler"
        android:layout_width="385dp"
        android:layout_height="119dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offers_hearder"
        app:layout_constraintVertical_bias="0.277" />

</androidx.constraintlayout.widget.ConstraintLayout>